--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "moment": "^2.29.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-router-config": "^5.1.1",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
   },
@@ -37,5 +38,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-router-dom": "^5.2.0"
   }
 }
