--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "moment": "^2.29.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-router": "^5.2.0",
     "react-router-config": "^5.1.1",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
@@ -40,6 +41,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/runtime": "^7.12.13",
     "react-router-dom": "^5.2.0"
   }
 }
